public/css/app.css
/* ... */
nav,
section {
    display: block;
}

.w-nav-menu {
    position: relative;
    float: right;
}

.w-nav-button {
    position: relative;
    float: right;
    padding: 18px;
    font-size: 24px;
    display: none;
    cursor: pointer;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    tap-highlight-color: rgba(0, 0, 0, 0);
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
.w-nav-button img{
    width: 33px;
    height: 22px;;
}
.w-nav-button h1 {
    margin-top: 0px;
    margin-bottom: 0px;
    color: white;
}

.w-nav-link {
    position: relative;
    display: inline-block;
    vertical-align: top;
    text-decoration: none;
    color: #222222;
    padding: 20px;
    text-align: left;
    margin-left: auto;
    margin-right: auto;
}

.w-nav {
    position: relative;
    background: #dddddd;
    z-index: 1000;
}

.w-nav:before,
.w-nav:after {
    content: " ";
    display: table;
}

.w-nav:after {
    clear: both;
}

.w-nav:before,
.w-nav:after {
    content: " ";
    display: table;
}

.w-container {
    margin-left: auto;
    margin-right: auto;
    max-width: 940px;
}

.w-container:after {
    clear: both;
}

.brand {
    margin-bottom: 5px;
}

.w-nav-menu a {
    color: white;
    text-decoration: none;
}

.nav-link {
    margin-top: 5px;
    font-family: 'Open Sans', sans-serif;
}

.navbar {
    background-image: -webkit-linear-gradient(270deg, #9948ff, #9948ff);
    background-image: linear-gradient(180deg, #9948ff, #9948ff);
    box-shadow: 1px 1px 28px -2px rgba(0, 0, 0, .52);
}

.alert {
    width: 100%;
    text-align: center;
}

.alert-success {
    color: green;
    font-size: 30px;
}

.alert-danger {
    color: red;
    font-size: 30px;
}

.landing-cont {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    margin-top: 30px;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
}

.landing-cont a {
    color: black;
    text-decoration: none;
}

.landing-section {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: stretch;
    -webkit-align-items: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
}

.main-heading {
    margin-top: 0px;
    margin-bottom: 0px;
    font-family: 'Open Sans', sans-serif;
    font-size: 40px;
    font-weight: 400;
    line-height: 50px;
    color: #41475A;
}

.second-heading {
    margin-top: 12px;
    margin-bottom: 0px;
    font-family: 'Open Sans', sans-serif;
    font-size: 28px;
    font-weight: 300;
    color: #41475A;
}

.signup-btn {
    width: 294px;
    height: 65px;
    margin-top: 32px;
    margin-bottom: 30px;
    padding: 21px;
    border-radius: 9px;
    background-image: -webkit-linear-gradient(270deg, #fff, #fff);
    background-image: linear-gradient(180deg, #fff, #fff);
    -webkit-transition: background-color 800ms cubic-bezier(.48, .077, .25, 1);
    transition: background-color 800ms cubic-bezier(.48, .077, .25, 1);
    text-align: center;
}

.button:hover {
    background-image: -webkit-linear-gradient(270deg, rgba(72, 187, 255, .31), rgba(72, 187, 255, .31)), -webkit-linear-gradient(270deg, #fff, #fff);
    background-image: linear-gradient(180deg, rgba(72, 187, 255, .31), rgba(72, 187, 255, .31)), linear-gradient(180deg, #fff, #fff);
}

.text {
    display: inline-block;
}

.link {
    margin-left: 7px;
    color: #9948ff;
    font-size: 21px;
    text-decoration: none;
}

.signup-cont {
    margin-top: 180px;
}

.signup-cont a {
    color: #9948ff;
    text-decoration: none;
}

.w-button {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 9px 15px;
    border: 0;
    border: 3px solid #48bbff;
    line-height: inherit;
    text-decoration: none;
    cursor: pointer;
    border-radius: 9px;
}

.fab {
    position: fixed;
    right: 50px;
    bottom: 50px;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 60px;
    height: 60px;
    padding-top: 15px;
    padding-left: 15px;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    border-radius: 100px;
    background-image: -webkit-linear-gradient(270deg, #48bbff, #48bbff);
    background-image: linear-gradient(180deg, #48bbff, #48bbff);
    box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, .23);
}

.fab img {
    width: 32px;
    height: 32px;
    max-width: 100%;
    vertical-align: middle;
    display: inline-block;
    border: 0;
}

.w-inline-block {
    max-width: 100%;
    display: inline-block;
}

.w-input,
.w-select {
    display: block;
    width: 100%;
    height: 38px;
    padding: 8px 12px;
    margin-bottom: 10px;
    font-size: 14px;
    line-height: 1.42857143;
    color: #333333;
    vertical-align: middle;
    background-color: #ffffff;
    border: 1px solid #cccccc;
}
/* ... */

